--- a/index.html
+++ b/index.html
@@ -1,73 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <title>LeanCloud 实时留言板</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>留言板</title>
+  <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.0/dist/av-min.js"></script>
   <style>
-    body { font-family: sans-serif; max-width: 600px; margin: auto; padding: 20px; }
-    #messages { border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: scroll; margin-bottom: 10px; }
-    .msg { margin: 5px 0; }
-    #name, #message { width: 100%; margin-bottom: 10px; }
+    body {
+      font-family: "Helvetica Neue", sans-serif;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 1rem;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    #messages {
+      max-width: 600px;
+      margin: 1rem auto;
+      padding: 1rem;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      max-height: 400px;
+      overflow-y: auto;
+    }
+    .msg {
+      margin-bottom: 1rem;
+      padding: 0.5rem;
+      border-bottom: 1px solid #eee;
+    }
+    .msg span {
+      display: block;
+      font-size: 0.9rem;
+      color: #555;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      max-width: 600px;
+      margin: 1rem auto;
+      gap: 0.5rem;
+    }
+    input, textarea {
+      padding: 0.75rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    button {
+      padding: 0.75rem;
+      font-size: 1rem;
+      background: #28a745;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #218838;
+    }
   </style>
 </head>
 <body>
-  <h2>留言板（LeanCloud 实时同步）</h2>
-  <div id="messages"></div>
-  <input type="text" id="name" placeholder="你的名字">
-  <textarea id="message" placeholder="写点什么..." rows="3"></textarea>
-  <button onclick="sendMessage()">发送</button>
+  <h1>简洁留言板</h1>
 
-  <!-- LeanCloud SDK -->
-  <script src="https://unpkg.com/leancloud-realtime/dist/realtime.browser.min.js"></script>
+  <div id="messages">
+    <p>加载中...</p>
+  </div>
+
+  <form id="msgForm">
+    <input type="text" id="name" placeholder="你的名字" required />
+    <textarea id="content" placeholder="留言内容" required></textarea>
+    <button type="submit">发送</button>
+  </form>
 
   <script>
-    // 🚨 替换成你自己的 LeanCloud AppID 和 AppKey
-    const APP_ID = 'IwogPISVgDBTZFveD6orVyv4-gzGzoHsz';
-    const APP_KEY = 'tSvZWkAoXJGUwNydArLF5u0z';
-
-    const clientId = 'user-' + Math.floor(Math.random() * 100000); // 自动生成唯一客户端名
-
-    const { Realtime } = AV;
-    const realtime = new Realtime({
-      appId: APP_ID,
-      appKey: APP_KEY,
-      region: 'cn', // 国内
+    // LeanCloud 初始化
+    AV.init({
+      appId: "IwogPISVgDBTZFveD6orVyv4-gzGzoHsz",
+      appKey: "tSvZWkAoXJGUwNydArLF5u0z",
+      serverURLs: "https://iwogpisv.lc-cn-n1-shared.com" 
     });
 
-    let messageList = document.getElementById('messages');
-    let conversation;
+    const Message = AV.Object.extend("Message");
 
-    realtime.createIMClient(clientId).then(client => {
-      return client.createConversation({
-        name: '留言板',
-        members: [], // 单聊天室
-        unique: true
-      });
-    }).then(c => {
-      conversation = c;
-      conversation.queryMessages({ limit: 100 }).then(messages => {
-        messages.forEach(msg => addMessage(msg));
-      });
-      conversation.on('message', addMessage);
-    }).catch(console.error);
-
-    function addMessage(message) {
-      const div = document.createElement('div');
-      div.className = 'msg';
-      const from = message.from || '匿名';
-      div.textContent = `[${from}] ${message.text}`;
-      messageList.appendChild(div);
-      messageList.scrollTop = messageList.scrollHeight;
-    }
-
-    function sendMessage() {
-      const name = document.getElementById('name').value || '匿名';
-      const text = document.getElementById('message').value.trim();
-      if (!text) return;
-      conversation.send(new AV.TextMessage(text), { transient: false }).then(() => {
-        document.getElementById('message').value = '';
+    async function loadMessages() {
+      const query = new AV.Query("Message");
+      query.ascending("createdAt");
+      query.limit(100);
+      const results = await query.find();
+      const msgDiv = document.getElementById("messages");
+      msgDiv.innerHTML = "";
+      results.forEach(item => {
+        const name = item.get("name") || "匿名";
+        const content = item.get("content") || "";
+        const created = item.createdAt.toLocaleString();
+        const msgHTML = `
+          <div class="msg">
+            <strong>${name}</strong>
+            <span>${content}</span>
+            <small>${created}</small>
+          </div>`;
+        msgDiv.innerHTML += msgHTML;
       });
     }
+
+    document.getElementById("msgForm").addEventListener("submit", async function (e) {
+      e.preventDefault();
+      const name = document.getElementById("name").value.trim();
+      const content = document.getElementById("content").value.trim();
+      if (!name || !content) return alert("请填写完整信息");
+
+      const msg = new Message();
+      msg.set("name", name);
+      msg.set("content", content);
+      await msg.save();
+      document.getElementById("msgForm").reset();
+      loadMessages();
+    });
+
+    loadMessages();
+    // 可选：定时刷新
+    setInterval(loadMessages, 10000);
   </script>
 </body>
 </html>
